<resources>
    <string name="app_name">We Care</string>

    <string name="alert.api.211">Input fields missing</string>
    <string name="alert.api.212">Session expired. Please relogin</string>
    <string name="alert.unknown_error">Something went wrong. Please try again later.</string>
    <string name="alert.network_error">A network error has occured.</string>
    <string name="alert.common.suggestion">Network timeout. Please try again after some time.</string>
    <string name="alert.network.ssl.error"> </string>

    <string name="alert.network.no.response.from.server" />
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Login with your card number</string>
    <string name="title_activity_parent_login">Sign in</string>
    <string name="blood_pressure">Blood Pressure Reports</string>
    <string name="systolic_hint">Systolic(mm of Hg)</string>
    <string name="diastolic_hint">Diastolic(mm of Hg)</string>
    <string name="enter">Enter</string>
    <string name="fasting_hint">Fasting(ppmg/dl)</string>
    <string name="pp_hint">Post Prandial(ppmg/dl) </string>
    <string name="random_hint">Random(mg/dl)</string>
    <string name="checkup_req">Checkup Requests</string>
    <string name="service_req">Services Requested:</string>
    <string name="token">Token</string>
    <string name="name">Name</string>
    <string name="fasting">Fasting</string>
    <string name="random">Random</string>
    <string name="pp">Post Prandial</string>
    <string name="predicted_random_value">Predicted Random Value</string>
    <string name="pressure">Pressure</string>
    <string name="systolic">Systolic</string>
    <string name="diastolic">Diastolic</string>
    <string name="marks">Remarks</string>
    <string name="vitals">Vitals</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="change_of_health">Change Of Health</string>
    <string name="bmi">BMI :</string>
    <string name="remarks">Remarks</string>
    <string name="last_checkup">Last Checkup</string>
    <string name="checkup_for">Check up</string>
    <string name="time_till_last_checkup">Last Check up</string>
    <string name="health_tips">Health Tips</string>
    <string name="we_care_health_tips">We Care Health Tips</string>
    <string name="sugar_report_last_time">Sugar Report</string>
    <string name="list_of_ecg_report">List Of ECG Reports</string>
    <string name="unique_id">Unique Id:</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="sign_in">Sign In</string>
    <string name="list_of_prescription">List Of Prescriptions</string>

    <string name="set_time">Set time</string>
    <string name="submit">Submit</string>

    <string name="select_date">Select Date</string>
    <string name="sorry">Sorry You have already requested for all the services</string>
    <string name="blood_sucrose_level">Blood Sucrose Level Reports</string>
    <string name="mgdl">mg/dl</string>
    <string name="your_details">Your Details</string>
    <string name="height_hint">Height(cm)</string>
    <string name="weight_hint">Weight(Kg)</string>
    <string name="temp_hint">Temperature(°F)</string>
    <string name="list_of_vital_reports">List Of Vital Reports</string>
    <string name="upload">Upload</string>
    <string name="prescription">Prescription</string>
    <string name="ecg_report">ECG Report</string>
    <string name="capture">Capture</string>
    <string name="where_would_u_like_to_go">Where would you like to go?</string>
    <string name="parent">Parent</string>
    <string name="siblings">Siblings</string>
    <string name="volunteer">Volunteer</string>
    <string name="time1">Time:</string>
    <string name="dated1">Dated:</string>
    <string name="sys">SYS</string>
    <string name="dia">DIA</string>
    <string name="service_requested">Service Requested:</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Name</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="time">200</string>
    <string name="good">Good</string>
    <string name="sucrose_level">Sucrose Level(mg/dl)</string>
    <string name="bmi1">BMI</string>
    <string name="age1">Age</string>
    <string name="title_activity_child_login">Sign in</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="we_care">We Care</string>
    <string name="for_a_better_life">For A better Life</string>
    <string name="this_is_page1">This is page 1</string>
</resources>
