<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Welcome"
    android:background="@drawable/back4">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:fitsSystemWindows="true"
        android:layout_marginTop="169dp"
        android:src="@drawable/wecarefinal" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="222dp"
        android:text="@string/where_would_u_like_to_go"
        android:textColor="#007cb6"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="160dp"
        android:background="@drawable/circ_button1"
        android:text="@string/parent"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/button2"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="107dp"
        android:background="@drawable/circ_button1"
        android:text="@string/siblings"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />
    <Button
        android:id="@+id/button3"
        android:layout_width="140dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:background="@drawable/circ_button1"
        android:text="@string/volunteer"
        android:textColor="#FFFFFF"
        android:textSize="18sp" />
</RelativeLayout>