<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstractfront"
    tools:context="com.example.hp.wecarenewedition.PredictedSugar">
    <LinearLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:layout_margin="0dp"
                android:id="@+id/sucrose_levelmg_dl"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/sucrose_level" />
            <EditText

                android:layout_weight="1"
                android:id="@+id/diastolic_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/diastolic_hint" />
        </LinearLayout>
        <LinearLayout
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/bmi_level"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/age1" />
            <EditText
                android:layout_weight="1"
                android:id="@+id/age_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/bmi1" />
        </LinearLayout>
        <Button
            android:layout_marginTop="25dp"
            android:id="@+id/checking_diabetic"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/circ_button1"
            android:text="Check"
            android:textAllCaps="false"/>
        <ImageView
            android:id="@+id/sugarLevelImage"
            android:layout_margin="70dp"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:textColor="#000"
            android:textSize="15sp"
            android:text="Our Algorithm Predicts Blood Sugar With 82% Accuracy "/>
    </LinearLayout>


</RelativeLayout>