<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/abstractfront"
    tools:context="com.example.hp.wecarenewedition.ChildViewActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/sugar"
                    android:scaleType="fitXY"
                    android:id="@+id/image1"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:text="@string/last_checkup"
                    android:layout_gravity="center_horizontal"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="left"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:text="@string/checkup_for"
                        />
                    <TextView
                        android:layout_margin="10dp"
                        android:id="@+id/last_checkup"
                        android:textColor="#000"
                        android:textSize="14sp"
                        android:layout_gravity="center_horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="02.08.2018"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_margin="7dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_gravity="right"
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:text="@string/time_till_last_checkup"
                        />

                    <TextView
                        android:id="@+id/timetilllast_checkup"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="10dp"
                        android:text="02"
                        android:textColor="#000"
                        android:textSize="14sp" />
                </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:layout_margin="7dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_margin="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#000"
                        android:text="@string/remarks"
                        />
                    <TextView
                        android:layout_gravity="center"
                        android:layout_margin="10dp"
                        android:id="@+id/remarks_checkup"
                        android:textColor="#000"
                        android:textSize="20sp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Good"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:padding="25dp"
            android:layout_margin="10dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardMaxElevation="8dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/sugar1"/>
                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sugar_report_last_time"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:layout_gravity="center_horizontal"/>
                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/sugar_barchart">
                </com.github.mikephil.charting.charts.HorizontalBarChart>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:text="@string/predicted_random_value"
                        android:textSize="18sp"
                        android:textColor="#000000"/>
                   <TextView
                       android:layout_margin="5dp"
                       android:layout_weight="1"
                       android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:text="   120"
                       android:layout_gravity="center"
                       android:textSize="30sp"
                       android:textColor="#fff"
                       android:background="@drawable/circ_button"/>
                </LinearLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:src="@drawable/sugar"
                    android:scaleType="fitXY"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pressure"
                    android:layout_gravity="center_horizontal"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#000"/>
                <com.github.mikephil.charting.charts.HorizontalBarChart
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/pressure_barchart">

                </com.github.mikephil.charting.charts.HorizontalBarChart>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="90dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/random"
                        android:textColor="#0f015e"
                        android:textSize="18sp" />
                    <TextView
                        android:id="@+id/pressure_remarks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#000"
                        android:textStyle="bold"
                        android:layout_marginTop="10dp"
                        android:textSize="18sp"
                        android:text="120 "/>

                </LinearLayout>
            </LinearLayout>


        </android.support.v7.widget.CardView>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardMaxElevation="15dp"
            android:layout_margin="10dp"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_margin="5dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/sugar" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="25sp"
                    android:textStyle="bold"
                    android:textColor="#000"
                    android:text="@string/health_tips"
                    android:layout_gravity="center_horizontal"/>


                <Button
                    android:id="@+id/wecare_tips"
                    android:layout_margin="5dp"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/we_care_health_tips"
                    android:textColor="#000"
                    android:background="@android:color/transparent"/>
                <Button
                    android:id="@+id/newhealth_tips"
                    android:layout_marginBottom="15dp"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="More"/>
            </LinearLayout>

        </android.support.v7.widget.CardView>
    </LinearLayout>

</ScrollView>