<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="1dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="2dp"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="6dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <LinearLayout
                    android:id="@+id/linsi"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/time"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/time1"
                        android:textColor="#757575"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/dated1"
                        android:textColor="#757575"
                        android:textSize="12sp" />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/cardView"
                android:layout_marginEnd="4dp"
                android:layout_toEndOf="@+id/cardView">

                <LinearLayout
                    android:id="@+id/linsi2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_margin="8dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/systolic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/time1"
                        android:textColor="#757575"
                        android:textSize="32sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="41dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight=".33"
                        android:gravity="center|left"
                        android:text="@string/sys"
                        android:textColor="#757575"
                        android:textSize="12sp" />
                    <TextView
                        android:id="@+id/diastolic"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/time1"
                        android:textColor="#757575"
                        android:textSize="32sp"
                        android:textStyle="bold" />
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="41dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_weight=".33"
                        android:gravity="left|center"
                        android:text="@string/dia"
                        android:textColor="#757575"
                        android:textSize="12sp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>